--- a/static/css/dark/style.css
+++ b/static/css/dark/style.css
@@ -1304,7 +1304,7 @@ body {
   .expertise-items {
     margin-top: 20px;
   }
-  .expertise-items .col-md-6{
+  .expertise-items .col-md-3{
     margin-bottom: 12px;
   }
   
@@ -1312,7 +1312,7 @@ body {
     background: rgba(255, 255, 255, 0.05);
     border-radius: 10px;
     padding: 25px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
     height: 100%;
     transition: all 0.3s ease;
   }
@@ -1347,7 +1347,7 @@ body {
   .skills-section {
     background: rgba(255, 255, 255, 0.03);
     border-radius: 15px;
-    padding: 30px;
+    padding: 15px;
     height: 100%;
   }
   
