--- a/static/css/dark/style.css
+++ b/static/css/dark/style.css
@@ -929,7 +929,7 @@ body {
   border-radius: 10px;
   text-align: center;
   margin-top: 45px;
-  border: 3px solid transparent;
+  /* border: 3px solid transparent; */
   transition: ease all 0.35s; }
   .feature-box-1 .icon {
     text-align: center;
